# plastex-lpil-plugin

./: .gitignore  Readme.md  pyproject.toml
lpilPlasTeX/templates/: Lpil_plastex.jinja2
lpilPlasTeXPlugin/: ConfigPlasTeXPlugin.py
lpilPlasTeXPlugin/Renderers/LPiLGerby/: Footnotes.jinja2s  __init__.py  lpil.jinja2s
scripts/: convertPygments
